# sdlpal-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
3rd/stb_image/: CMakeLists.txt  stb_image.cpp  stb_image.h
src/: config.h  log.h  main.cpp
src/editor/: editor_window.cpp  editor_window.h  file_panel.cpp  file_panel.h  game_panel.cpp  game_panel.h  native_window.cpp  native_window.h  window.h
src/engine/: engine.cpp  engine.h  game_renderer.cpp  game_renderer.h  map.h  mkf.cpp  mkf.h  palette.cpp  palette.h  renderer.cpp  renderer.h  yj1.cpp  yj1.h
src/engine/render/: render_backend.cpp  render_backend.h  sdl2_backend.cpp  sdl2_backend.h
src/framework/: application.cpp  application.h  window.cpp  window.h
src/game/: game.cpp  game.h  native_window.cpp  native_window.h
src/gui/: editor_window.cpp  editor_window.h
src/mkf/: mkf.cpp  mkf.h  yj1.h
